# mensa-crawler

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  gitconfig  known_hosts  package-lock.json  package.json  price.gnuplot  readme.md  tsconfig.json  word-include.gnuplot
.github/: dependabot.yml
.github/workflows/: container.yml  coverage.yml  rust.yml
source/: canteen.ts  csv-file.ts  fs.ts  git.ts  gnuplot.ts  graph-stuff.ts  index.ts  meal.ts  migrate-old.ts  network.ts  serial-promise.ts  weeknumber.ts
source/crawler/: index.ts  source.ts
src/: git.rs  http.rs  main.rs  meal.rs  parse.rs
test/: crawler-source.ts  dailytip.html  get.sh  list.html  singlemeal.html
