[package]
name = "mensa-crawler"
description = "Crawls the canteen data of student canteens in Hamburg"
version = "4.0.3"
license = "MIT"
repository = "https://github.com/HAWHHCalendarBot/mensa-crawler"
authors = ["EdJoPaTo <calendarbot-mensa-crawler@hawhh.de>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# See https://doc.rust-lang.org/cargo/reference/profiles.html
codegen-units = 1
lto = true
strip = "debuginfo"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
lazy-regex = "3"
once_cell = "1"
scraper = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"

[dev-dependencies]
float_eq = "1.0"
