[package]
name = "mensa-crawler"
description = "Crawls the canteen data of student canteens in Hamburg"
version = "4.0.5"
license = "MIT"
repository = "https://github.com/HAWHHCalendarBot/mensa-crawler"
authors = ["EdJoPaTo <calendarbot-mensa-crawler@hawhh.de>"]
edition = "2021"

[lints.rust]
unsafe_code = "forbid"
unused_qualifications = "warn"
[lints.clippy]
pedantic = "warn"
nursery = "warn"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
lazy-regex = "3"
scraper = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "3"

[dev-dependencies]
float_eq = "1.0"
