[package]
name = "mensa-crawler"
description = "Crawls the canteen data of student canteens in Hamburg"
version = "4.0.5"
license = "MIT"
repository = "https://github.com/HAWHHCalendarBot/mensa-crawler"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"
unused_qualifications = "warn"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
allow_attributes = "warn"
min_ident_chars = "warn"
unused_trait_names = "warn"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
lazy-regex = "3"
scraper = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "3"

[dev-dependencies]
float_eq = "1.0"
